--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -159,7 +159,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\Engine\Script\MainSceneScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\StarScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\StarMatrixScript.cpp" />
-    <ClCompile Include="..\Classes\Engine\Script\StarParticleEffect.cpp" />
+    <ClCompile Include="..\Classes\Engine\Script\StarParticleScript.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\StartLevelLabel.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\StatusBar.cpp" />
     <ClCompile Include="..\Classes\Engine\Script\StatusLayer.cpp" />
@@ -202,7 +202,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\Script\MainSceneScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\StarScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\StarMatrixScript.h" />
-    <ClInclude Include="..\Classes\Engine\Script\StarParticleEffect.h" />
+    <ClInclude Include="..\Classes\Engine\Script\StarParticleScript.h" />
     <ClInclude Include="..\Classes\Engine\Script\StartLevelLabel.h" />
     <ClInclude Include="..\Classes\Engine\Script\StatusBar.h" />
     <ClInclude Include="..\Classes\Engine\Script\StatusLayer.h" />
