--- a/proj.win32/PopStar.vcxproj
+++ b/proj.win32/PopStar.vcxproj
@@ -185,9 +185,13 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\Engine\Actor\SequentialInvoker.h" />
     <ClInclude Include="..\Classes\Engine\Actor\SoundPlayer.h" />
     <ClInclude Include="..\Classes\Engine\Audio\Audio.h" />
-    <ClInclude Include="..\Classes\Engine\Event\EvtDataCurrentScoreValueUpdated.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataCurrentScoreUpdated.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataHighScoreUpdated.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataLevelIndexUpdated.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataLevelSummaryStarted.h" />
     <ClInclude Include="..\Classes\Engine\Event\EvtDataPlayerExplodedStars.h" />
     <ClInclude Include="..\Classes\Engine\Event\EvtDataGeneric.h" />
+    <ClInclude Include="..\Classes\Engine\Event\EvtDataPlayerGotScore.h" />
     <ClInclude Include="..\Classes\Engine\Event\EvtDataRequestDestroyActor.h" />
     <ClInclude Include="..\Classes\Engine\Event\IEventData.h" />
     <ClInclude Include="..\Classes\Engine\Event\BaseEventData.h" />
